Fix overflow problems

--- a/app/renderer/components/Inspector/Inspector.css
+++ b/app/renderer/components/Inspector/Inspector.css
@@ -66,6 +66,15 @@
     flex-flow: column;
 }
 
+.inspector-main :global(.ant-card-head) {
+    max-height: 48px;
+}
+
+.inspector-main :global(.ant-card-body) {
+    height: calc(100% - 48px);
+    padding-bottom: 48px;
+}
+
 .inspector-main .interaction-tab-container :global(.ant-tabs) {
     height: 100%;
 }
@@ -126,7 +135,6 @@
 .inspector-main .recorded-actions :global(.ant-card-body),
 .inspector-main .interaction-tab-card :global(.ant-card-body) {
     overflow: scroll;
-    height: 100%;
 }
 
 .inspector-main .interaction-tab-card {
